--- a/dashboard.css
+++ b/dashboard.css
@@ -21,7 +21,7 @@
     font-weight: 700;
 }
 .nav-bar ul li a:hover{
-    color: black!important;
+    color: white!important;
 }
 .navbar{
     background: #3399ff;
@@ -79,7 +79,7 @@
     /* background: transparent; */
     font-size: 15px;
 }
-@media (max-width:700px) {
+@media (max-width:600px) {
     #courses p{
         font-size: 18px;
     }
@@ -118,7 +118,7 @@
     /* background: transparent; */
     font-size: jobs
 }
-@media (max-width:700px) {
+@media (max-width:600px) {
     #jobs p{
         font-size: 18px;
     }
@@ -129,11 +129,48 @@
 
 
 
-/* ---------------Contact us section------------- */
-#contact h1{
-    text-align: center;
-    color: #3399ff;
+
+/* -------------about us section------------- */
+
+.about-us{
+    margin: 50px auto; 
 }
+.about-us .row{
+    margin-top: 30px;
+}
+.col-md-4{
+    margin: 40px auto;
+}
+.profile{
+    padding: 70px 10px 10px;
+    background-color: lightgray;
+}
+.profile img{
+    top: -60px;
+    position: absolute;
+    left: calc(50% - 60px);
+    border: 10px solid white;
+}
+.user{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.profile h3{
+    font-size: 15px;
+    margin-top: 20px;
+    color: #3399ff;
+    font-weight: bold;
+}
+.profile .fa{
+    margin: 8px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+/* ---------------Contact us section------------- */
+
 #contact{
     background: #d9d9d9;
     padding-top: 40px;
