--- a/dashboard.css
+++ b/dashboard.css
@@ -132,10 +132,12 @@
 
 /* -------------about us section------------- */
 
-.about-us{
+#about-us{
+    width: 100%;
+    /* height: 80vh; */
     margin: 50px auto; 
 }
-.about-us .row{
+#about-us .row{
     margin-top: 30px;
 }
 .col-md-4{
@@ -166,6 +168,15 @@
     margin: 8px;
     font-size: 20px;
     font-weight: bold;
+}
+.profile span{
+    font-size: 12px;
+    color:black;
+}
+.profile:hover{
+    box-shadow: 0 0 15px 5px rgba(0,0,0,0.5);
+    cursor: pointer;
+    transition: 0.5s;
 }
 
 
