--- a/confrm password.css
+++ b/confrm password.css
@@ -29,18 +29,18 @@
 }
 
 /* -----------login section-------------- */
-.login-signup{
+.confirm-pswd{
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(to bottom right,#e033ff,#3399ff);
 }
-.login-box{
-    top: 60%;
+.confirm-pswd-box{
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
     /* overflow: hidden; */
-    width: 500px;
+    width: 400px;
     background: white;
     padding: 30px;
     border-radius: 15px;
@@ -48,7 +48,11 @@
 .forgot{
   padding: 12px;
 }
-
+@media (max-width:700px) {
+    .confirm-pswd-box{
+        width: 320px;
+    }
+}
 
 /* -------------about us section------------- */
 
