--- a/forgot password.css
+++ b/forgot password.css
@@ -29,12 +29,12 @@
 }
 
 /* -----------login section-------------- */
-.login-signup{
+.forgot-pswd{
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(to bottom right,#e033ff,#3399ff);
 }
-.login-box{
+.forgot-pswd-box{
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -48,15 +48,21 @@
 .forgot{
   padding: 12px;
 }
-.login-box h2{
+.forgot-pswd-box h2{
     text-align: center;
     font-weight: bold;
 }
-.login-box a{
+.forgot-pswd-box a{
     padding: 5px;
     display: block;
     text-decoration: none;
     font-size: 15px;
+}
+
+@media (max-width:700px) {
+    .forgot-pswd-box{
+        width: 370px;
+    }
 }
 
 /* -------------about us section------------- */
