--- a/course-details.css
+++ b/course-details.css
@@ -227,195 +227,75 @@ nav .profile-details img{
 /* ------------------------------------------home section in home content start----------- */
 .home-section .home-content{
   position: relative;
-  padding-top: 70px;
+  padding-top: 60px;
 }
-/* --------------------------------------------------------Recommended -course section start----------- */
-.home-section .home-content .course-width{
+.home-section .home-content .course-details{
   width: 100%;
-}
-.home-section .home-content .rec-course{
-  display: inline-block;
+  height: 100%;
+  background-color: rgb(75, 75, 75);
+  color: white;
   padding: 20px;
+
 }
-.home-section .home-content .rec-course .course-level{
+.home-section .home-content .course-details .course-link{
+  font-size: 18px;
+  font-weight: 500;
+}
+.home-section .home-content .course-details .course-link a{
   text-decoration: none;
+  color: #3399ff;
+  padding: 10px;
 }
-.home-section .home-content .card-body .card-title{
-  font-weight: bold;
-}
-.home-section .home-content .card-body .card-price{
-  font-weight: bold;
-}
-/* --------------------------------------------------------Recommended -course section end----------- */
-.home-content .overview-boxes{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 0 20px;
-  margin-bottom: 26px;
-}
-.overview-boxes .box{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: calc(100% / 4 - 15px);
-  background: #fff;
-  padding: 15px 14px;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-}
-.overview-boxes .box-topic{
-  font-size: 20px;
-  font-weight: 500;
-}
-.home-content .box .number{
-  display: inline-block;
-  font-size: 35px;
-  margin-top: -6px;
-  font-weight: 500;
-}
-.home-content .box .indicator{
-  display: flex;
-  align-items: center;
-}
-.home-content .box .indicator i{
-  height: 20px;
-  width: 20px;
-  background: #8FDACB;
-  line-height: 20px;
-  text-align: center;
-  border-radius: 50%;
-  color: #fff;
-  font-size: 20px;
-  margin-right: 5px;
-}
-.box .indicator i.down{
-  background: #e87d88;
-}
-.home-content .box .indicator .text{
+.home-section .home-content .course-details .course-link .fa{
   font-size: 12px;
 }
-.home-content .box .cart{
-  display: inline-block;
-  font-size: 32px;
-  height: 50px;
-  width: 50px;
-  background: #cce5ff;
-  line-height: 50px;
+.home-section .home-content .course-details .course-rating{
+  padding: 10px;
+}
+.home-section .home-content .course-details .course-include ul li{
+  margin-left: 40px;
+}
+.home-section .home-content .course-learn{
+  width: 80%;
+  height: 100%;
+  margin: 20px auto;
+  padding: 15px;
+  background-color: white;
+  color: gray;
+  /* text-align: center; */
+  /* justify-content: center; */
+  /* display: block; */
+  border: 1px solid gray;
+}
+.home-section .home-content .course-learn h4{
   text-align: center;
-  color: #66b0ff;
-  border-radius: 12px;
-  margin: -15px 0 0 6px;
 }
-.home-content .box .cart.two{
-   color: #2BD47D;
-   background: #C0F2D8;
- }
-.home-content .box .cart.three{
-   color: #ffc233;
-   background: #ffe8b3;
- }
-.home-content .box .cart.four{
-   color: #e05260;
-   background: #f7d4d7;
- }
-.home-content .total-order{
-  font-size: 20px;
-  font-weight: 500;
-}
-.home-content .sales-boxes{
-  display: flex;
-  justify-content: space-between;
-  /* padding: 0 20px; */
-}
-
-/* left box */
-.home-content .sales-boxes .recent-sales{
-  width: 65%;
-  background: #fff;
-  padding: 20px 30px;
-  margin: 0 20px;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-.home-content .sales-boxes .sales-details{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.sales-boxes .box .title{
-  font-size: 24px;
-  font-weight: 500;
-  /* margin-bottom: 10px; */
-}
-.sales-boxes .sales-details li.topic{
-  font-size: 20px;
-  font-weight: 500;
-}
-.sales-boxes .sales-details li{
+.home-section .home-content .course-learn .learning-list ul{
   list-style: none;
-  margin: 8px 0;
 }
-.sales-boxes .sales-details li a{
-  font-size: 18px;
-  color: #333;
-  font-size: 400;
-  text-decoration: none;
+.home-section .home-content .course-learn .learning-list ul li:before {
+  content: '✓ ';
 }
-.sales-boxes .box .button{
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
+.home-section .home-content .content-description{
+  width: 80%;
+  height: 100%;
+  margin: 20px auto;
+  padding: 15px;
+  background-color: white;
+  color: black;
+  border: 1px solid gray;
+  padding-bottom: 10px;
 }
-.sales-boxes .box .button a{
-  color: #fff;
-  background: #0A2558;
-  padding: 4px 12px;
-  font-size: 15px;
-  font-weight: 400;
-  border-radius: 4px;
-  text-decoration: none;
-  transition: all 0.3s ease;
+.home-section .home-content .content-description .content{
+  text-align: center;
+  display: block;
+  justify-content: center;
 }
-.sales-boxes .box .button a:hover{
-  background:  #0d3073;
+.home-section .home-content .content-description .description ul li{
+  margin-left: 25px;
 }
 
-/* Right box */
-.home-content .sales-boxes .top-sales{
-  width: 35%;
-  background: #fff;
-  padding: 20px 30px;
-  margin: 0 20px 0 0;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-}
-.sales-boxes .top-sales li{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 10px 0;
-}
-.sales-boxes .top-sales li a img{
-  height: 40px;
-  width: 40px;
-  object-fit: cover;
-  border-radius: 12px;
-  margin-right: 10px;
-  background: #333;
-}
-.sales-boxes .top-sales li a{
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-}
-.sales-boxes .top-sales li .product,
-.price{
-  font-size: 17px;
-  font-weight: 400;
-  color: #333;
-}
+
 /* Responsive Media Query */
 @media (max-width: 1240px) {
   .sidebar{
@@ -442,25 +322,6 @@ nav .profile-details img{
     left: 220px;
   }
 }
-@media (max-width: 1150px) {
-  .home-content .sales-boxes{
-    flex-direction: column;
-  }
-  .home-content .sales-boxes .box{
-    width: 100%;
-    overflow-x: scroll;
-    margin-bottom: 30px;
-  }
-  .home-content .sales-boxes .top-sales{
-    margin: 0;
-  }
-}
-@media (max-width: 1000px) {
-  .overview-boxes .box{
-    width: calc(100% / 2 - 15px);
-    margin-bottom: 15px;
-  }
-}
 @media (max-width: 700px) {
   nav .sidebar-button .dashboard,
   nav .profile-details .admin_name,
@@ -471,15 +332,14 @@ nav .profile-details img{
     height: 50px;
     min-width: 40px;
   }
-  .home-content .sales-boxes .sales-details{
-    width: 560px;
+  .home-section .home-content .course-details{
+    height: 100vh;
+  }
+  .home-section .home-content .course-learn{
+    height: 55vh;
   }
 }
 @media (max-width: 550px) {
-  .overview-boxes .box{
-    width: 100%;
-    margin-bottom: 15px;
-  }
   .sidebar.active ~ .home-section nav .profile-details{
     display: none;
   }
